# lambda-rust-sqlite3-efs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  serverless.yml
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-33cf60d6e8cf3efd3762b84eaf08bc8f7599407caa289fe340fa64c1d8af3063.json  query-f097fa33fba91b106a0bf1fd1483928da455aafd72de699dd5fe5c3e3fdfebe1.json
migrations/: 20230310034419_add_initial_schema.up.sql  20230310034420_switch_to_string_ids.down.sql  20230310034420_switch_to_string_ids.up.sql
opentofu/: .gitignore  efs.tf  iam.tf  lambda.tf  main.tf  sqs.tf  versions.tf  vpc.tf
scripts/: deploy-functions.sh  smoke-test.sh
src/: api.rs  db.rs  id.rs  lib.rs  main.rs  models.rs  sqs.rs  writer.rs  writer_main.rs
terraform/: .gitignore  efs.tf  iam.tf  lambda.tf  main.tf  ssm.tf  versions.tf  vpc.tf
