[package]
name = "lambda-rust-sqlite3-efs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
dotenv = "0.15.0"
