[package]
name = "lambda-rust-sqlite3-efs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "macros"] }
dotenv = "0.15.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1.2"
tower-http = { version = "0.5.2", features = ["trace"] }
openssl = { version = "0.10.68", features = ["vendored"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
xid = "1.1.1"
